Update dummy controller Change configuration of appdaemon apps to be from config_generator.py Add a template for appdaemon apps Update dockerfile to mount appdaemon config folder

--- a/kybfarm-docker-compose.yaml
+++ b/kybfarm-docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./.env:/app/.env
       - ./server/homeassistant/config:/app/server/homeassistant/config
+      - ./server/appdaemon/config:/app/server/appdaemon/config
       - ./server/src/config_generator/config_generator.py:/app/server/src/config_generator/config_generator.py
 
   homeassistant:
