--- a/edge/requirements.txt
+++ b/edge/requirements.txt
@@ -7,13 +7,18 @@ adafruit-circuitpython-scd4x==1.4.1
 adafruit-circuitpython-typing==1.9.5
 Adafruit-PlatformDetect==3.53.0
 Adafruit-PureIO==1.1.11
+certifi==2024.2.2
+charset-normalizer==3.3.2
+idna==3.7
 minimalmodbus==2.1.1
 paho-mqtt==1.6.1
 pyftdi==0.55.0
 pyserial==3.5
 python-dotenv==1.0.1
 pyusb==1.2.1
+requests==2.32.2
 rpi-ws281x==5.0.0
 RPi.GPIO==0.7.1
 sysv-ipc==1.1.0
 typing-extensions==4.8.0
+urllib3==2.2.1
