--- a/vff-simulation-docker-compose.yaml
+++ b/vff-simulation-docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   mqtt:
-    container_name: mqtt_broker
+    container_name: ${MQTT_BROKER_URL}
     image: eclipse-mosquitto:2
     volumes:
       - ./server/mosquitto/config:/mosquitto/config
