--- a/vff-simulation-docker-compose.yaml
+++ b/vff-simulation-docker-compose.yaml
@@ -1,19 +1,6 @@
 version: "3"
 
 services:
-  mqtt:
-    container_name: ${MQTT_BROKER_URL}
-    image: eclipse-mosquitto:2
-    volumes:
-      - ./server/mosquitto/config:/mosquitto/config
-      - ./server/mosquitto/data:/mosquitto/data
-      - ./server/mosquitto/log:/mosquitto/log
-    restart: unless-stopped
-    ports:
-      - "1883:1883"
-    env_file:
-      - .env
-
   vff_simulator:
     container_name: vff_simulator
     build: ./server/src/containers/vff_simulator
@@ -30,6 +17,30 @@ services:
     depends_on:
       - mqtt
       - vff_simulator
+    env_file:
+      - .env
+
+  # heat_pump_simulator:
+  #   container_name: heat_pump_simulator
+  #   build: ./server/src/containers/heat_pump_simulator
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - mqtt
+  #     - vff_simulator
+  #     - temperature_sensor_simulator
+  #   env_file:
+  #     - .env
+
+  mqtt:
+    container_name: ${MQTT_BROKER_URL}
+    image: eclipse-mosquitto:2
+    volumes:
+      - ./server/mosquitto/config:/mosquitto/config
+      - ./server/mosquitto/data:/mosquitto/data
+      - ./server/mosquitto/log:/mosquitto/log
+    restart: unless-stopped
+    ports:
+      - "1883:1883"
     env_file:
       - .env
 
@@ -50,13 +61,17 @@ services:
     env_file:
       - .env
 
-  # heat_pump_simulator:
-  #   container_name: heat_pump_simulator
-  #   build: ./server/src/containers/heat_pump_simulator
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - mqtt
-  #     - vff_simulator
-  #     - temperature_sensor_simulator
-  #   env_file:
-  #     - .env
+  influxdb:
+    container_name: influxdb
+    image: influxdb:latest
+    volumes:
+      - influxdb:/var/lib/influxdb2
+      - influxdb:/etc/influxdb2
+    restart: unless-stopped
+    ports:
+      - "8086:8086"
+    env_file:
+      - .env
+
+volumes:
+  influxdb:
